[platform] filtering bytecode verification switch out of custom VM options (IDEA-242421)
GitOrigin-RevId: bbe9e5e6d20b7db9ed6164129696daa90d87f62a